--- a/.github/workflows/AndroidBuild.yml
+++ b/.github/workflows/AndroidBuild.yml
@@ -14,6 +14,9 @@ jobs:
 
       - name: Setup Java JDK
         uses: actions/setup-java@v4.2.1
+        with:
+          java-version: '17'
+          distribution: 'oracle'
 
       - name: Build with Gradle
         run: ./gradlew build
